Layout fixes and data pass change

--- a/objective-c-movie-db/objective-c-movie-db/View/Base.lproj/Main.storyboard
+++ b/objective-c-movie-db/objective-c-movie-db/View/Base.lproj/Main.storyboard
@@ -48,7 +48,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yxC-1D-9JF">
-                                            <rect key="frame" x="144" y="122.5" width="31" height="15"/>
+                                            <rect key="frame" x="144" y="123" width="31" height="15"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <color key="textColor" red="0.59215686270000001" green="0.59215686270000001" blue="0.59215686270000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
@@ -57,13 +57,13 @@
                                     <constraints>
                                         <constraint firstItem="JNO-qM-Ziu" firstAttribute="top" secondItem="Gqc-XC-s0t" secondAttribute="topMargin" id="23d-1d-zUZ"/>
                                         <constraint firstItem="LNo-nc-myK" firstAttribute="top" secondItem="XMu-1m-8Ji" secondAttribute="bottom" constant="8" id="7Oi-Ke-1xl"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="yxC-1D-9JF" secondAttribute="bottom" constant="14" id="ETU-dq-bi0"/>
                                         <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="XMu-1m-8Ji" secondAttribute="trailing" constant="20" symbolic="YES" id="Jch-VF-Byy"/>
                                         <constraint firstItem="XMu-1m-8Ji" firstAttribute="leading" secondItem="JNO-qM-Ziu" secondAttribute="trailing" constant="8" id="Len-5o-8zV"/>
                                         <constraint firstAttribute="bottomMargin" secondItem="JNO-qM-Ziu" secondAttribute="bottom" id="Nc1-CM-GaW"/>
                                         <constraint firstItem="JNO-qM-Ziu" firstAttribute="leading" secondItem="Gqc-XC-s0t" secondAttribute="leadingMargin" id="bY5-sm-NKs"/>
                                         <constraint firstItem="LNo-nc-myK" firstAttribute="leading" secondItem="JNO-qM-Ziu" secondAttribute="trailing" constant="8" id="dYt-Am-dht"/>
                                         <constraint firstItem="XMu-1m-8Ji" firstAttribute="top" secondItem="Gqc-XC-s0t" secondAttribute="topMargin" constant="18" id="f6f-Oo-lZB"/>
-                                        <constraint firstItem="yxC-1D-9JF" firstAttribute="top" secondItem="LNo-nc-myK" secondAttribute="bottom" constant="54" id="fbw-Dn-H49"/>
                                         <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="LNo-nc-myK" secondAttribute="trailing" constant="20" symbolic="YES" id="hmW-Ze-iad"/>
                                         <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="yxC-1D-9JF" secondAttribute="trailing" constant="20" symbolic="YES" id="qrg-gC-W6c"/>
                                         <constraint firstItem="yxC-1D-9JF" firstAttribute="leading" secondItem="JNO-qM-Ziu" secondAttribute="trailing" constant="8" id="tTh-AR-spn"/>
